fix: review comment for light and dark modes

--- a/src/components/ParsedHtml/style.css
+++ b/src/components/ParsedHtml/style.css
@@ -1,6 +1,13 @@
 .parsed-link {
-    color: #7F99FB !important;
     text-decoration: none;
+}
+
+body.chakra-ui-dark .parsed-link {
+    color: #7F99FB !important;
+}
+
+body.chakra-ui-light .parsed-link {
+    color: #2D4EC9 !important;
 }
 
 .parsed-link:hover {
